# commonplace

./: README.md  fileio.py  requirements.txt  setup.cfg  setup.py
src/commonplace/: fileio.py
