[metadata]
name = commonplace-divsel
version = 0.0.1
author = shaenr
author_email = divselector@protonmail.com
description = A set of familiar utilities that are so reoccurring, they are in their own portable package just for me.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shaenr/commonplace
project_urls =
    Bug Tracker = https://github.com/shaenr/commonplace/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src